--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -143,7 +143,9 @@ homebrew_cask_packages:
   - name: font-noto-sans-cjk-jp
   - name: font-source-han-code-jp
   - name: font-fira-code
+    state: absent
   - name: font-hack
+    state: absent
   - name: libreoffice
   - name: libreoffice-language-pack
 
