--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -148,11 +148,8 @@
         global: yes
         state: "{{ item.state|default('latest') }}"
       with_items: "{{ npm_packages }}"
-    - block:
-      - name: dump brew install packages
-        command: brew-file init
-      - name: push Brewfile
-        command: brew-file push
+    - name: dump brew install packages
+      command: brew-file update
       when: "'brew-file' in homebrew_packages|map(attribute='name')|list"
     - name: dump atom install packages
       shell: apm list --installed --bare>./atom-packages.txt
