--- a/textlint/package.json
+++ b/textlint/package.json
@@ -2,13 +2,13 @@
   "private": true,
   "description": "my textlint rules",
   "dependencies": {
-    "textlint": "^10.2.1",
-    "textlint-rule-ja-no-mixed-period": "^2.0.0",
-    "textlint-rule-ja-unnatural-alphabet": "^1.3.0",
-    "textlint-rule-no-doubled-joshi": "^3.5.1",
-    "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "^1.0.1",
-    "textlint-rule-preset-ja-technical-writing": "^1.0.0",
-    "textlint-rule-prh": "^5.0.1"
+    "textlint": "^10.*",
+    "textlint-rule-ja-no-mixed-period": "^2.*",
+    "textlint-rule-ja-unnatural-alphabet": "^1.*",
+    "textlint-rule-no-doubled-joshi": "^3.*",
+    "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "^1.*",
+    "textlint-rule-preset-ja-technical-writing": "^2.*",
+    "textlint-rule-prh": "^5.*"
   },
   "devDependencies": {},
   "author": "wate",
