--- a/textlint/package.json
+++ b/textlint/package.json
@@ -3,13 +3,12 @@
   "description": "my textlint rules",
   "dependencies": {
     "textlint": "^10.*",
+    "textlint-rule-editorconfig": "^1.*",
     "textlint-rule-ja-no-mixed-period": "^2.*",
-    "textlint-rule-ja-unnatural-alphabet": "^1.*",
-    "textlint-rule-no-doubled-joshi": "^3.*",
+    "textlint-rule-ja-unnatural-alphabet": "^1.3.0",
     "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "^1.*",
-    "textlint-rule-preset-ja-technical-writing": "^2.*",
     "textlint-rule-no-nfd": "^1.*",
-    "textlint-rule-prh": "^5.*"
+    "textlint-rule-preset-ja-technical-writing": "^2.*"
   },
   "author": "wate",
   "license": "MIT"
