--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -93,7 +93,7 @@
           lineinfile:
             dest: ~/.bashrc
             line: '[ -f "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }} ] && source "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }}'
-          with_items: "{{ homebrew_packages|json_query('bash_completion', 'defined')|selectattr('state', 'undefined')|list }}"
+          with_items: "{{ homebrew_packages|selectattr('bash_completion', 'defined')|selectattr('state', 'undefined')|list }}"
         - name: Ensure rcfile setting
           blockinfile:
             create: true
