--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 hash_behaviour = merge
+host_key_checking = False
 retry_files_enabled = False
-ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
+ansible_managed = Ansible managed: modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
 
 [galaxy]
 role_skeleton = ~/Project/wate/role_skeleton/data
